# wasp-axis-project

./: CMakeLists.txt  Makefile  README.md
report/: project-plan.org  weekly-report.org
scripts/: camera_edges.py  generate_gif.sh  generate_orbit.bash  pbrt_cameras.py  rubiks_cube.py
src/: CMakeLists.txt  ba_example.cpp  ba_example2.cpp  bal_problem.h  multi_camera_calibration.cpp
